@@ -144,6 +144,7 @@
 			<group ui:inject="GraphGroup" ipadding="0" expand="true" fill="true" text="labels.graphs.LFO">
 				<graph width.min="200" expand="true" height.min="200" >
 					<origin hpos="-1" vpos="1" visibility="false" />
+					<origin hpos="-1" vpos="-1" visibility="false" />
 
 					<!-- Grid -->
 					<ui:with color="graph_alt_2">
@@ -172,6 +173,7 @@
 					<!-- Axes -->
 					<axis min="0" max="360" angle="1.5" visibility="false"/>
 					<axis min="0" max="1" angle="0" visibility="false"/>
+					<axis o="1" min="0" max="100" angle="0.5" visibility="false"/>
 
 					<!-- Mesh -->
 					<mesh id="lfo" width="3" color="graph_mesh" smooth="true" visibility="(!ex :atype) or (:atype ieq 0)"/>
@@ -179,7 +181,16 @@
 					<mesh id="alfo" width="3" color="(ex :ms and :ms) ? 'side' : 'right'" smooth="true" visibility="(ex :atype) and (:atype ine 0)"/>
 
 					<!-- Dots and markers -->
-					<marker v="360.0 - 3.6*:xfade" color="graph_marker_cycle" color.a="0.5" />
+					<marker
+						o="1" ox="2" oy="1"
+						zero="0"
+						id="xfade"
+						editable="true"
+						pointer="vsize"
+						color="graph_marker_cycle"
+						hcolor="graph_marker_cycle"
+						color.a="0.5"
+						hcolor.a="0.5" />
 
 					<ui:if test="!(ex :in_r)">
 						<marker v=":clsh" ox="1" oy="0" color="graph_mesh" color.a="0.65"/>
